--- a/lightfield.html
+++ b/lightfield.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 
-    <title>Vincent Escueta  |  Rasterizester</title>
+    <title>Vincent Escueta  |  Lightfield Camera</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -74,52 +74,52 @@
             </p><table style="width=100%">
                 <tbody><tr>
                     <td align="middle">
-                    <img src="./Vincent Escueta _ CS 194-26_files/legos5.jpg" width="300px">
+                    <img src="lightfield/img/legos5.jpg" width="300px">
                     <figcaption align="middle">alpha = -.5</figcaption></td>
                     <td align="middle">
-                    <img src="./Vincent Escueta _ CS 194-26_files/legos6.jpg" width="300px">
+                    <img src="lightfield/img/legos6.jpg" width="300px">
                     <figcaption align="middle">alpha = -.4</figcaption></td>
                     <td align="middle">
-                    <img src="./Vincent Escueta _ CS 194-26_files/legos7.jpg" width="300px">
+                    <img src="lightfield/img/legos7.jpg" width="300px">
                     <figcaption align="middle">alpha = -.3</figcaption></td>
                    <td align="middle">
-                    <img src="./Vincent Escueta _ CS 194-26_files/legos8.jpg" width="300px">
+                    <img src="lightfield/img/legos8.jpg" width="300px">
                     <figcaption align="middle">alpha = -.2</figcaption></td>
                 </tr>
             </tbody></table>
             <table style="width=100%">
                 <tbody><tr>
                    <td align="middle">
-                    <img src="./Vincent Escueta _ CS 194-26_files/legos9.jpg" width="300px">
+                    <img src="lightfield/img/legos9.jpg" width="300px">
                     <figcaption align="middle">alpha = -.1</figcaption></td>
                     <td align="middle">
-                    <img src="./Vincent Escueta _ CS 194-26_files/legos10.jpg" width="300px">
+                    <img src="lightfield/img/legos10.jpg" width="300px">
                     <figcaption align="middle">alpha = .0</figcaption></td>
                    <td align="middle">
-                    <img src="./Vincent Escueta _ CS 194-26_files/legos11.jpg" width="300px">
+                    <img src="lightfield/img/legos11.jpg" width="300px">
                     <figcaption align="middle">alpha = .1</figcaption></td>
                     <td align="middle">
-                    <img src="./Vincent Escueta _ CS 194-26_files/legos12.jpg" width="300px">
+                    <img src="lightfield/img/legos12.jpg" width="300px">
                     <figcaption align="middle">alpha = .2</figcaption></td>
                     <td align="middle">
-                    <img src="./Vincent Escueta _ CS 194-26_files/legos13.jpg" width="300px">
+                    <img src="lightfield/img/legos13.jpg" width="300px">
                     <figcaption align="middle">alpha = .3</figcaption></td>
                 </tr>
             </tbody></table>
             <table style="width=100%">
                 <tbody><tr>
                    <td align="middle">
-                    <img src="./Vincent Escueta _ CS 194-26_files/legos.gif" height="500px">
+                    <img src="lightfield/img/legos.gif" height="500px">
                     <figcaption align="middle">legos</figcaption></td>
                 </tr>
             </tbody></table>
             <table style="width=100%">
                 <tbody><tr>
                    <td align="middle">
-                    <img src="./Vincent Escueta _ CS 194-26_files/sphere.gif" height="500px">
+                    <img src="lightfield/img/sphere.gif" height="500px">
                     <figcaption align="middle">sphere</figcaption></td>
                     <td align="middle">
-                    <img src="./Vincent Escueta _ CS 194-26_files/chess.gif" height="500px">
+                    <img src="lightfield/img/chess.gif" height="500px">
                     <figcaption align="middle">chess</figcaption></td>
                 </tr>
             </tbody></table>
@@ -130,49 +130,49 @@
             <table style="width=100%">
                 <tbody><tr>
                     <td align="middle">
-                    <img src="./Vincent Escueta _ CS 194-26_files/sphereaa0.jpg" width="350px">
+                    <img src="lightfield/img/sphereaa0.jpg" width="350px">
                     <figcaption align="middle">radius = 0</figcaption></td>
                    <td align="middle">
-                    <img src="./Vincent Escueta _ CS 194-26_files/sphereaa1.jpg" width="350px">
+                    <img src="lightfield/img/sphereaa1.jpg" width="350px">
                     <figcaption align="middle">radius = 1</figcaption></td>
                     <td align="middle">
-                    <img src="./Vincent Escueta _ CS 194-26_files/sphereaa2.jpg" width="350px">
+                    <img src="lightfield/img/sphereaa2.jpg" width="350px">
                     <figcaption align="middle">radius = 2</figcaption></td>
                    <td align="middle">
-                    <img src="./Vincent Escueta _ CS 194-26_files/sphereaa3.jpg" width="350px">
+                    <img src="lightfield/img/sphereaa3.jpg" width="350px">
                     <figcaption align="middle">radius = 3</figcaption></td>
                 </tr>
             </tbody></table>
             <table style="width=100%">
                 <tbody><tr>
                     <td align="middle">
-                    <img src="./Vincent Escueta _ CS 194-26_files/sphereaa4.jpg" width="350px">
+                    <img src="lightfield/img/sphereaa4.jpg" width="350px">
                     <figcaption align="middle">radius = 4</figcaption></td>
                     <td align="middle">
-                    <img src="./Vincent Escueta _ CS 194-26_files/sphereaa5.jpg" width="350px">
+                    <img src="lightfield/img/sphereaa5.jpg" width="350px">
                     <figcaption align="middle">radius = 5</figcaption></td>
                     <td align="middle">
-                    <img src="./Vincent Escueta _ CS 194-26_files/sphereaa6.jpg" width="350px">
+                    <img src="lightfield/img/sphereaa6.jpg" width="350px">
                     <figcaption align="middle">radius = 6</figcaption></td>
                    <td align="middle">
-                    <img src="./Vincent Escueta _ CS 194-26_files/sphereaa7.jpg" width="350px">
+                    <img src="lightfield/img/sphereaa7.jpg" width="350px">
                     <figcaption align="middle">radius = 7</figcaption></td>
                 </tr>
             </tbody></table>
             <table style="width=100%">
                 <tbody><tr>
                    <td align="middle">
-                    <img src="./Vincent Escueta _ CS 194-26_files/legosaa.gif" height="500px">
+                    <img src="lightfield/img/legosaa.gif" height="500px">
                     <figcaption align="middle">legos | alpha = -.2</figcaption></td>
                     <td align="middle">
-                    <img src="./Vincent Escueta _ CS 194-26_files/morelegosaa.gif" height="500px">
+                    <img src="lightfield/img/morelegosaa.gif" height="500px">
                     <figcaption align="middle">more legos | alpha = .1</figcaption></td>
                 </tr>
             </tbody></table>
             <table style="width=100%">
                 <tbody><tr>
                    <td align="middle">
-                    <img src="./Vincent Escueta _ CS 194-26_files/sphereaa.gif" height="500px">
+                    <img src="lightfield/img/sphereaa.gif" height="500px">
                     <figcaption align="middle">sphere | alpha = .2</figcaption></td>
                 </tr>
             </tbody></table>
@@ -194,7 +194,7 @@
                        <a href="https://www.instagram.com/vincentescueta/" target="_blank"><i class="fab fa-instagram"></i></a>
                        <a href="https://500px.com/vescueta/" target="_blank"><i class="fab fa-500px"></i></a>
                     </p>
-                    <p>Last Updated: November 19, 2019</p>    
+                    <p>Last Updated: April 4, 2020</p>    
             </div>
         </div>
     </section>
