--- a/index.html
+++ b/index.html
@@ -174,6 +174,21 @@
 <!--             <h3 class="text-center">Technical</h3> -->
 <!--             <div class="row no-gutter"> -->
                 <div class="col-lg-4 col-sm-6">
+                    <a href="Pathtracer.html" class="portfolio-box portfolio-link programming">
+                        <img src="img/spheres.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Computer Graphics
+                                </div>
+                                <div class="project-name">
+                                    Pathtracer & Lens Simulator
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
                     <a href="WarpandMosaic.html" class="portfolio-box portfolio-link programming">
                         <img src="img/autostitch.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -219,35 +234,20 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="Pathtracer.html" class="portfolio-box portfolio-link programming">
-                        <img src="img/spheres.jpg" class="img-responsive" alt="">
+                    <a href="GeoMenagerie.html" class="portfolio-box portfolio-link programming">
+                        <img src="img/part6_phong.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
                                     Computer Graphics
                                 </div>
                                 <div class="project-name">
-                                    Pathtracer & Lens Simulator
+                                    GeoMenagerie
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
-<!--                 <div class="col-lg-4 col-sm-6">
-                    <a href="LensSimulator.html" class="portfolio-box portfolio-link programming">
-                        <img src="img/dragon_lens2.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                     Computer Graphics
-                                </div>
-                                <div class="project-name">
-                                    Lens Simulator
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div> -->
                 <div class="col-lg-4 col-sm-6">
                     <a href="Rasterizester.html" class="portfolio-box portfolio-link programming">
                         <img src="img/part8_competition.jpg" class="img-responsive" alt="">
@@ -264,15 +264,15 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="GeoMenagerie.html" class="portfolio-box portfolio-link programming">
-                        <img src="img/part6_phong.jpg" class="img-responsive" alt="">
+                    <a href="FrequenciesGradients.html" class="portfolio-box portfolio-link programming">
+                        <img src="img/lightfield.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Computer Graphics
+                                    Computational Photography
                                 </div>
                                 <div class="project-name">
-                                    GeoMenagerie
+                                    Lightfield Camera
                                 </div>
                             </div>
                         </div>
