--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <!--             <h3 class="text-center">Animation</h3> -->
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6 animation">
-                    <a href="cabin.html" class="portfolio-box portfolio-link animation">
+                    <a href="jesus.html" class="portfolio-box portfolio-link animation">
                         <img src="img/jesus_website.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -264,7 +264,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="FrequenciesGradients.html" class="portfolio-box portfolio-link programming">
+                    <a href="lightfield.html" class="portfolio-box portfolio-link programming">
                         <img src="img/lightfield.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
