--- a/jesus.html
+++ b/jesus.html
@@ -66,19 +66,26 @@
 <h1 align="middle">Crucifixion of Jesus</h1>
         <div class="container ">
             <div class="row">
-              <<div class="col-lg-4 col-lg-offset-4 col-sm-2 text-center photos">
+              <div class="col-lg-4 col-lg-offset-4 col-sm-2 text-center photos">
+                  <br><br>
+              </div>
+            </div> 
+        <video width="1080" height="1920" controls>
+          <source src="jesus/img/Jesus4_masterLayer_turntableShape_beauty.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+        </video>
+        </div>
+        <div class="container ">
+            <div class="row">
+              <div class="col-lg-4 col-sm-2 text-center photos">
                   <br><br>
                   <img src="jesus/img/Jesus4k.0000.jpg"  />
               </div>
-            </div>    
-            <div class="row">
-              <div class="col-lg-4 col-lg-offset-4 col-sm-2 text-center photos">
+              <div class="col-lg-4 col-sm-2 text-center photos">
                   <br><br>
                   <img src="jesus/img/Jesus4k.0060.jpg"  />
               </div>
-            </div>    
-            <div class="row">
-              <div class="col-lg-4 col-lg-offset-4 col-sm-2 text-center photos">
+              <div class="col-lg-4 col-sm-2 text-center photos">
                   <br><br>
                   <img src="jesus/img/Jesus4k.0120.jpg"  />
              </div>
