--- a/jesus.html
+++ b/jesus.html
@@ -66,9 +66,9 @@
 <h1 align="middle">Crucifixion of Jesus</h1>
         <div class="container ">
             <div class="row">
-              <div class="col-lg-4 col-lg-offset-4 col-sm-2 text-center photos">
+              <div class="text-center photos">
                   <br><br>
-                  <video width="540" height="960" controls>
+                  <video width="360" height="480" controls>
                       <source src="jesus/img/Jesus4_masterLayer_turntableShape_beauty.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                   </video>
