--- a/jesus.html
+++ b/jesus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-    <title>Vincent Escueta  |  Crucifixion of Jesus</title>
+    <title>Vincent Escueta  |  Passion of Jesus</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -63,7 +63,17 @@
     </nav>
     <header class="bg"> </header>
 <section class="bg">
-<h1 align="middle">Crucifixion of Jesus</h1>
+<h1 align="middle">Passion of Jesus</h1>
+    <h2 align="middle">Carrying of the Cross</h2>
+        <div class="container ">
+            <div class="row">
+              <div class="col-lg-4 col-sm-2 text-center photos">
+                  <br><br>
+                  <img src="jesus/img/carrying_of_the_cross__render5Shape_beauty.0120.jpg"  />
+              </div>
+            </div>
+        </div>
+    <h2 align="middle">Crucifixion of Jesus</h2>
         <div class="container ">
             <div class="row">
               <div class="text-center photos">
@@ -89,6 +99,25 @@
                   <br><br>
                   <img src="jesus/img/Jesus4k.0120.jpg"  />
              </div>
+            </div>
+        <h2 align="middle">The Pieta</h2>
+        <div class="container ">
+            <div class="row">
+              <div class="text-center photos">
+                  <br><br>
+                  <video width="360" height="480" controls>
+                      <source src="jesus/img/pieta.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                  </video>
+              </div>
+            </div> 
+        </div>
+        <div class="container ">
+            <div class="row">
+              <div class="col-lg-4 col-sm-2 text-center photos">
+                  <br><br>
+                  <img src="jesus/imgpieta__perspShape3_beauty.0001_4K.jpg"  />
+              </div>
             </div>
              <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
