--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                     Animation: Lighting
                                 </div>
                                 <div class="project-name">
-                                    Crucifixion of Jesus
+                                    Passion of Jesus
                                 </div>
                             </div>
                         </div>
