--- a/jesus.html
+++ b/jesus.html
@@ -67,7 +67,7 @@
     <h2 align="middle">Carrying of the Cross</h2>
         <div class="container ">
             <div class="row">
-              <div class="col-lg-6 col-sm-3 text-center photos">
+              <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                   <br><br>
                   <img src="jesus/img/carrying_of_the_cross__render5Shape_beauty.0120.jpg"  />
               </div>
@@ -114,7 +114,7 @@
         </div>
         <div class="container ">
             <div class="row">
-              <div class="col-lg-6 col-sm-3 text-center photos">
+              <div class="text-center photos">
                   <br><br>
                   <img src="jesus/img/pieta__perspShape3_beauty.0001_4K.jpg"  />
               </div>
