--- a/jesus.html
+++ b/jesus.html
@@ -114,7 +114,7 @@
         </div>
         <div class="container ">
             <div class="row">
-              <div class="text-center photos">
+              <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                   <br><br>
                   <img src="jesus/img/pieta__perspShape3_beauty.0001_4K.jpg"  />
               </div>
