--- a/jesus.html
+++ b/jesus.html
@@ -67,7 +67,7 @@
     <h2 align="middle">Carrying of the Cross</h2>
         <div class="container ">
             <div class="row">
-              <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
+              <div class="col-lg-4 col-lg-offset-2 col-sm-6 text-center photos">
                   <br><br>
                   <img src="jesus/img/carrying_of_the_cross__render5Shape_beauty.0120.jpg"  />
               </div>
@@ -121,8 +121,9 @@
             </div>
              <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                  <p align="middle">Made with Maya and rendered with Renderman 23</p><br><br>
+                  <br><br>
                   <h2>My Contributions</h2>
+                  <p align="middle">Made with Maya and rendered with Renderman 23</p>
                   <p align="middle">I staged the lighting for the whole scene</p>
                 <br><br><br><br>
              </div>
