--- a/jesus.html
+++ b/jesus.html
@@ -111,15 +111,7 @@
                   <img src="jesus/img/pieta__perspShape3_beauty.0001_4K.jpg"  />
               </div>
             </div>
-             <div class="row">
-              <div class="colcol-sm-6 text-center photos">
-                  <br><br>
-                  <h2>My Contributions</h2>
-                  <p align="middle">Made with Maya and rendered with Renderman 23</p>
-                  <p align="middle">I staged the lighting for the whole scene</p>
-                <br><br><br><br>
-             </div>
-            </div>
+        </div>
         <div class="container ">
             <div class="row">
               <div class="text-center photos">
@@ -131,6 +123,16 @@
               </div>
             </div> 
         </div>
+        <div class="container">
+             <div class="row">
+              <div class="colcol-sm-6 text-center photos">
+                  <br><br>
+                  <h2>My Contributions</h2>
+                  <p align="middle">Made with Maya and rendered with Renderman 23</p>
+                  <p align="middle">I staged the lighting for the whole scene</p>
+                <br><br><br><br>
+             </div>
+            </div>
 <!--             <div class="row">
               <div class="col-lg-4 col-lg-offset-2 col-sm-4 text-center photos">
                     <img src="Others/img/NameTag.png"  />
