--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 <!--             <div class="row no-gutter"> -->
 <!--                 <h3 class="text-center">Photography<h3> -->
                 <div class="col-lg-4 col-sm-6">
-                    <a href="Photography.html" class="portfolio-box portfolio-link photography">
+                    <a href="https://500px.com/p/vescueta?view=photos" class="portfolio-box portfolio-link photography">
                         <img src="img/natashabwe.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -306,7 +306,7 @@
                                     Photography
                                 </div>
                                 <div class="project-name">
-                                    Personal
+                                    Personal [Goes to 500px Page]
                                 </div>
                             </div>
                         </div>
