--- a/index.html
+++ b/index.html
@@ -349,10 +349,10 @@
                        <a href="https://github.com/vincent-escueta22" target="_blank"><i class="fab fa-github-alt"></i></a>
                        <a href="https://www.facebook.com/vincent.escueta22" target="_blank"><i class="fab fa-facebook"></i></a>
                        <a href="https://www.imdb.com/name/nm10309356/?ref_=m_ttfcd_cr177" target="_blank"><i class="fab fa-imdb"></i></a>
-                       <a href="https://www.instagram.com/vincentescueta/" target="_blank"><i class="fab fa-instagram"></i></a>
+                       <a href="https://www.instagram.com/mynameisvincent/" target="_blank"><i class="fab fa-instagram"></i></a>
                        <a href="https://500px.com/vescueta/" target="_blank"><i class="fab fa-500px"></i></a>
                     </p>
-                    <p>Last Updated: April 4, 2020</p>    
+                    <p>Last Updated: March 14, 2022</p>    
             </div>
         </div>
 
