--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center">
                     <br>
-                    <p class="extra-padding bigger-text">Hi, my name is Vincent Escueta and I am currently a Multimedia Teacher at Bishop Garcia Diego High School in Santa Barbara, former Technical Assistant at Lucasfilm Animation, former Technical Assistant at The Madison Square Garden Company, former Render Technical Assistant at Industrial Light & Magic, alumnus of the University of California, Berkeley with a B.S. in Electrical Engineering and Computer Science, and a Diamond Bar, California native. My skills and projects are in my résumé and portfolio. Outside of my work, I also enjoy cooking, photography, graphic design, video games, basketball, and bowling.</p>
+                    <p class="extra-padding bigger-text">Hi, my name is Vincent Escueta and I am currently a Rapid Prototype Technical Director at LAIKA, former IT Technician at Bishop Garcia Diego High School in Santa Barbara, former Technical Assistant at Lucasfilm Animation, former Technical Assistant at The Madison Square Garden Company, former Render Technical Assistant at Industrial Light & Magic, alumnus of the University of California, Berkeley with a B.S. in Electrical Engineering and Computer Science, and a Diamond Bar, California native. My skills and projects are in my résumé and portfolio. Outside of my work, I also enjoy cooking, photography, graphic design, video games, basketball, and bowling.</p>
                 </div>
             </div>
         </div>
@@ -107,10 +107,10 @@
                        <a href="https://github.com/vincent-escueta22" target="_blank"><i class="fab fa-github-alt"></i></a>
                        <a href="https://www.facebook.com/vincent.escueta22" target="_blank"><i class="fab fa-facebook"></i></a>
                        <a href="https://www.imdb.com/name/nm10309356/?ref_=m_ttfcd_cr177" target="_blank"><i class="fab fa-imdb"></i></a>
-                       <a href="https://www.instagram.com/vincentescueta/" target="_blank"><i class="fab fa-instagram"></i></a>
+                       <a href="https://www.instagram.com/mynameisvincent/" target="_blank"><i class="fab fa-instagram"></i></a>
                        <a href="https://500px.com/vescueta/" target="_blank"><i class="fab fa-500px"></i></a>
                     </p>
-                    <p>Last Updated: November 19, 2019</p>    
+                    <p>Last Updated: March 14, 2022</p>    
             </div>
         </div>
     </section>
