--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
             </div> -->
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img class="img-circle" src="img/face.jpg">
+                    <img class="img-circle" src="img/vincent_escueta_2022.jpg">
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center">
                     <br>
